--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -7,8 +7,47 @@ on:
     branches: [ main, develop ]
 
 jobs:
+  code-quality:
+    runs-on: ubuntu-latest
+    name: Code Quality Checks
+    
+    steps:
+    - name: Checkout code
+      uses: actions/checkout@v4
+
+    - name: Set up JDK 17
+      uses: actions/setup-java@v4
+      with:
+        java-version: '17'
+        distribution: 'temurin'
+        cache: gradle
+
+    - name: Grant execute permission for gradlew
+      run: chmod +x gradlew
+
+    - name: Run ktlint check
+      run: ./gradlew ktlintCheck
+
+    - name: Run Android lint
+      run: ./gradlew lint
+
+    - name: Upload ktlint results
+      uses: actions/upload-artifact@v4
+      if: always()
+      with:
+        name: ktlint-results
+        path: app/build/reports/ktlint/
+
+    - name: Upload lint results
+      uses: actions/upload-artifact@v4
+      if: always()
+      with:
+        name: lint-results
+        path: app/build/reports/lint-results*.html
+
   test:
     runs-on: ubuntu-latest
+    needs: code-quality
 
     steps:
     - name: Checkout code
@@ -30,48 +69,9 @@ jobs:
     - name: Build debug APK
       run: ./gradlew assembleDebug
 
-    - name: Run lint
-      run: ./gradlew lint
-
-    # Optional: Upload test results
     - name: Upload test results
       uses: actions/upload-artifact@v4
       if: always()
       with:
         name: test-results
         path: app/build/test-results/
-
-    # Optional: Upload lint results
-    - name: Upload lint results
-      uses: actions/upload-artifact@v4
-      if: always()
-      with:
-        name: lint-results
-        path: app/build/reports/lint-results*.html
-
-  # Instrumented tests would require an Android emulator
-  # Commented out for now as it's complex and may not be needed for initial setup
-  # instrumented-test:
-  #   runs-on: macos-latest
-  #   steps:
-  #   - name: Checkout code
-  #     uses: actions/checkout@v4
-  #
-  #   - name: Set up JDK 17
-  #     uses: actions/setup-java@v4
-  #     with:
-  #       java-version: '17'
-  #       distribution: 'temurin'
-  #       cache: gradle
-  #
-  #   - name: Grant execute permission for gradlew
-  #     run: chmod +x gradlew
-  #
-  #   - name: Run instrumented tests
-  #     uses: reactivecircus/android-emulator-runner@v2
-  #     with:
-  #       api-level: 30
-  #       target: default
-  #       arch: x86_64
-  #       profile: pixel_5
-  #       script: ./gradlew connectedAndroidTest
