linter and removed idea files

--- a/.gitignore
+++ b/.gitignore
@@ -29,6 +29,8 @@ build/
 .idea/kotlinScripting.xml
 .idea/artifacts/
 .idea/inspectionProfiles/
+.idea/androidTestResultsUserPreferences.xml
+.idea/deploymentTargetSelector.xml
 
 # Local configuration files (e.g., for Android Studio)
 local.properties
