--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -3,7 +3,8 @@ name: Android CI
 on:
   push:
     branches:
-      - '**'        # means all branches
+      - main
+      - 'releases/**'
   pull_request:
 
 jobs:
