--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,6 +12,7 @@
     <uses-permission android:name="android.permission.FOREGROUND_SERVICE_MICROPHONE" />
 
     <application
+        android:name="io.github.miclock.MicLockApplication"
         android:label="Mic Lock"
         android:icon="@mipmap/ic_launcher"
         android:allowBackup="true"
